/*
 * Copyright (c) 2022 Nordic Semiconductor ASA
 *
 * SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 */
syntax = "proto2";

import "common.proto";

option java_multiple_files = true;
option java_package = "no.nordicsemi.android.wifi.provisioning";

message ConnectionInfo {
  optional bytes ip4_addr = 1;
}

message DeviceStatus {
  optional ConnectionState state = 1;
  optional WifiInfo provisioning_info     = 10;
  optional ConnectionInfo connection_info = 11;
  optional ScanParams scan_info           = 12;
}

message Response {
  optional OpCode request_op_code         = 1;
  optional Status status                  = 2;
  optional DeviceStatus device_status     = 10;
}
