/*
 * Copyright (c) 2022 Nordic Semiconductor ASA
 *
 * SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 */
syntax = "proto2";

import "common.proto";

option java_multiple_files = true;
option java_package = "no.nordicsemi.android.wifi.provisioning";
message EnterpriseCertConfig {
  optional bytes ca_cert      = 1;
  optional bytes client_cert  = 2;
  optional bytes private_key  = 3;
  optional string private_key_passwd = 4;
  optional bytes ca_cert2      = 5;
  optional bytes client_cert2  = 6;
  optional bytes private_key2  = 7;
  optional string private_key_passwd2 = 8;
  optional string identity    = 9;
  optional string password    = 10;
}

message WifiConfig {
  optional WifiInfo wifi          = 1;
  optional bytes passphrase       = 2;
  optional bool volatileMemory    = 3;
  optional bool anyChannel        = 4; // Added for Android app compatibility (unused)
  optional EnterpriseCertConfig certs = 5;
}

message Request {
  optional OpCode op_code         = 1;
  optional ScanParams scan_params = 10;
  optional WifiConfig config      = 11;
}
